--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Life was grey</h1>
+			<h1>My world was shades of gray</h1>
 		</header>
 			<section id="content">
 				<canvas id="Chemotaxis" data-processing-sources="Chemotaxis.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    until I met you.
+		    until you made it colorful. 
 	    </footer>
 	</body>
 </html>
